--- a/tarea_2.ipynb
+++ b/tarea_2.ipynb
@@ -38,6 +38,7 @@
    ],
    "source": [
     "from pyspark.sql import SparkSession\n",
+    "import math\n",
     "spark = SparkSession.builder \\\n",
     "    .getOrCreate()\n",
     "sc = spark.sparkContext"
@@ -333,8 +334,32 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Stage 704:============================>                          (29 + 8) / 56]\r"
+      "                                                                                \r"
      ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total iterations: 5\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[(2, 0.11527618701171877), (3, 0.10328731884765627), (4, 0.10328731884765627)]"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -346,7 +371,326 @@
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### Generando grafos de prueba"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# def generate_graph(n_nodes, n_edges, tier_dict):\n",
+    "#     nodes = list(range(1, n_nodes+1))\n",
+    "#     uniform_prob = 1/n_nodes\n",
+    "#     probabilities = [0.2, 0.5, 0.3]\n",
+    "#     np.random.choice(elements, 10, p=probabilities)\n",
+    "#     return nodes\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Problema 2"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Recibir input"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Ejemplo tomado de https://www.geeksforgeeks.org/dijkstras-shortest-path-algorithm-greedy-algo-7/\n",
+    "nodes = list(range(1, 9))\n",
+    "edges = [(1,2,4), (1,3,2), (1,4,1), (3,2,1), (3,5,6),(4,5,9),(4,6,2),(7,8,9), (5,6,1)]"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Generar RDDs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "initial_node = 1\n",
+    "bc_initial_node = sc.broadcast(initial_node) # Disponibilizar para todos los worker\n",
+    "rdd_nodes = sc.parallelize(nodes)\n",
+    "rdd_edges = sc.parallelize(edges)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Formateamos las aristas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(1, (2, 4)),\n",
+       " (1, (3, 2)),\n",
+       " (1, (4, 1)),\n",
+       " (3, (2, 1)),\n",
+       " (3, (5, 6)),\n",
+       " (4, (5, 9)),\n",
+       " (4, (6, 2)),\n",
+       " (7, (8, 9)),\n",
+       " (5, (6, 1))]"
+      ]
+     },
+     "execution_count": 116,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rdd_edges = rdd_edges.map(lambda x: (x[0], (x[1], x[2])))\n",
+    "rdd_edges.collect()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. Escoge el nodo inicial, este nodo tiene costo acumulado 0 y todos los demás tienen costo acumulado\n",
+    "infinito."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(1, 0), (2, inf), (3, inf), (4, inf), (5, inf), (6, inf), (7, inf), (8, inf)]"
+      ]
+     },
+     "execution_count": 117,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rdd_init = rdd_nodes.map(lambda x: (x, math.inf) if x != bc_initial_node.value else (x, 0))\n",
+    "rdd_init.collect()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2. En cada iteración, cada nodo comunica el costo acumulado a sus vecinos. Cada nodo recibe este costo,\n",
+    "sumado con el costo de atravesar la arista."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(1, ((2, 4), 0)),\n",
+       " (1, ((3, 2), 0)),\n",
+       " (1, ((4, 1), 0)),\n",
+       " (3, ((2, 1), inf)),\n",
+       " (3, ((5, 6), inf)),\n",
+       " (4, ((5, 9), inf)),\n",
+       " (4, ((6, 2), inf)),\n",
+       " (5, ((6, 1), inf)),\n",
+       " (7, ((8, 9), inf))]"
+      ]
+     },
+     "execution_count": 122,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rdd_edges.join(rdd_init).collect()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(2, 4),\n",
+       " (3, 2),\n",
+       " (4, 1),\n",
+       " (2, inf),\n",
+       " (5, inf),\n",
+       " (5, inf),\n",
+       " (6, inf),\n",
+       " (6, inf),\n",
+       " (8, inf)]"
+      ]
+     },
+     "execution_count": 125,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rdd_pass_msg = rdd_edges.join(rdd_init).mapValues(lambda x: (x[0][0], x[0][1] + x[1])).values()\n",
+    "rdd_pass_msg.collect()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3. Para hacer merge de todos los mensajes dejamos el mínimo de todos los costos. Así, actualizamos cada\n",
+    "nodo con el costo mínimo recibido solo si es menor al costo acumulado que ya tenía ese nodo."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(2, 4), (3, 2), (4, 1), (5, inf), (6, inf), (8, inf)]"
+      ]
+     },
+     "execution_count": 128,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rdd_reduce_msg = rdd_pass_msg.reduceByKey(lambda x, y: min(x, y))\n",
+    "rdd_reduce_msg.collect()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[(1, 0), (2, 4), (3, 2), (4, 1), (5, inf), (6, inf), (7, inf), (8, inf)]"
+      ]
+     },
+     "execution_count": 139,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def robust_min(x):\n",
+    "    a, b = x\n",
+    "    try:\n",
+    "        return min(a,b)\n",
+    "    except:\n",
+    "        return a if a != None else b\n",
+    "    \n",
+    "rdd_updated_cost = rdd_init.leftOuterJoin(rdd_reduce_msg).mapValues(lambda x: robust_min(x))\n",
+    "rdd_updated_cost.collect()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "4. Si en dos iteraciones el costo en llegar para cada nodo no cambia, entonces nos detenemos."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 166,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def stop_condition(rdd_pre, rdd_post):\n",
+    "    # RDD donde las llaves son los nodos y los valores son 1 si no hubo cambio y 0 si lo hubo\n",
+    "    rdd_track_changes = rdd_pre.join(rdd_post).mapValues(lambda x: int(x[0] == x[1]))\n",
+    "    # Intersección\n",
+    "    n_changes = rdd_track_changes.values().reduce(lambda x, y: x + y) \n",
+    "    return n_changes == 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 167,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 167,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stop_condition(rdd_init, rdd_updated_cost)"
+   ]
   }
  ],
  "metadata": {
