--- a/tarea_2.ipynb
+++ b/tarea_2.ipynb
@@ -28,11 +28,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "23/06/21 19:00:55 WARN Utils: Your hostname, Matiass-MacBook-Air.local resolves to a loopback address: 127.0.0.1; using 192.168.100.162 instead (on interface en0)\n",
-      "23/06/21 19:00:55 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
+      "23/06/21 22:00:13 WARN Utils: Your hostname, Matiass-MacBook-Air.local resolves to a loopback address: 127.0.0.1; using 192.168.100.162 instead (on interface en0)\n",
+      "23/06/21 22:00:13 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
       "Setting default log level to \"WARN\".\n",
       "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
-      "23/06/21 19:00:55 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+      "23/06/21 22:00:13 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
      ]
     }
    ],
@@ -538,7 +538,10 @@
     }
    ],
    "source": [
-    "rdd_reduce_msg = rdd_pass_msg.reduceByKey(lambda x, y: min(x, y))\n",
+    "def pass_msg(rdd_pass_msg):\n",
+    "    return rdd_pass_msg.reduceByKey(lambda x, y: min(x, y))\n",
+    "    \n",
+    "rdd_reduce_msg = pass_msg(rdd_pass_msg)\n",
     "rdd_reduce_msg.collect()"
    ]
   },
@@ -624,6 +627,245 @@
    ],
    "source": [
     "stop_condition(rdd_init, rdd_updated_cost)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Consolidar en una función"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def robust_min(x):\n",
+    "    a, b = x\n",
+    "    try:\n",
+    "        return min(a,b)\n",
+    "    except:\n",
+    "        return a if a != None else b\n",
+    "    \n",
+    "def stop_condition(rdd_pre, rdd_post):\n",
+    "    # RDD donde las llaves son los nodos y los valores son 0 si no hubo cambio y 1 si lo hubo\n",
+    "    rdd_track_changes = rdd_pre.join(rdd_post).mapValues(lambda x: int(x[0] != x[1]))\n",
+    "    print('Track changes:', rdd_track_changes.collect())\n",
+    "    # Intersección\n",
+    "    n_changes = rdd_track_changes.values().reduce(lambda x, y: x + y) \n",
+    "    return n_changes == 0\n",
+    "\n",
+    "def single_source_shortest_path(rdd_nodes, rdd_edges):\n",
+    "    rdd_edges = rdd_edges.map(lambda x: (x[0], (x[1], x[2])))\n",
+    "\n",
+    "    # Nodo inicial en 0, el resto en infinito\n",
+    "    rdd_init = rdd_nodes.map(lambda x: (x, math.inf) if x != bc_initial_node.value else (x, 0))\n",
+    "    rdd_prev_cost = rdd_init\n",
+    "    stop_counter = 0\n",
+    "    for i in range(10):\n",
+    "        rdd_pass_msg = rdd_edges.join(rdd_prev_cost).mapValues(lambda x: (x[0][0], x[0][1] + x[1])).values()\n",
+    "        rdd_reduce_msg = rdd_pass_msg.reduceByKey(lambda x, y: min(x, y))\n",
+    "        rdd_updated_cost = rdd_prev_cost.leftOuterJoin(rdd_reduce_msg).mapValues(lambda x: robust_min(x))\n",
+    "        if stop_condition(rdd_prev_cost, rdd_updated_cost):\n",
+    "            stop_counter += 1\n",
+    "            if stop_counter == 2:\n",
+    "                break\n",
+    "        else:\n",
+    "            stop_counter = 0 \n",
+    "        rdd_prev_cost = rdd_updated_cost\n",
+    "        #print(\"Iteracion:\", i)\n",
+    "        #print(rdd_updated_cost.collect())\n",
+    "    return rdd_updated_cost\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Track changes: [(1, 0), (2, 1), (3, 1), (4, 1), (5, 0), (6, 0), (7, 0), (8, 0)]\n",
+      "Iteracion: 0\n",
+      "[(1, 0), (2, 4), (3, 2), (4, 1), (5, inf), (6, inf), (7, inf), (8, inf)]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Track changes: [(1, 0), (2, 1), (3, 0), (4, 0), (5, 1), (6, 1), (7, 0), (8, 0)]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteracion: 1\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(1, 0), (2, 3), (3, 2), (4, 1), (5, 8), (6, 3), (7, inf), (8, inf)]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Track changes: [(1, 0), (2, 0), (3, 0), (4, 0), (5, 0), (6, 0), (7, 0), (8, 0)]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteracion: 2\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(1, 0), (2, 3), (3, 2), (4, 1), (5, 8), (6, 3), (7, inf), (8, inf)]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Track changes: [(1, 0), (2, 0), (3, 0), (4, 0), (5, 0), (6, 0), (7, 0), (8, 0)]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "PythonRDD[225] at RDD at PythonRDD.scala:53"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nodes = list(range(1, 9))\n",
+    "edges = [(1,2,4), (1,3,2), (1,4,1), (3,2,1), (3,5,6),(4,5,9),(4,6,2),(7,8,9), (5,6,1)]\n",
+    "\n",
+    "initial_node = 1\n",
+    "bc_initial_node = sc.broadcast(initial_node) # Disponibilizar para todos los worker\n",
+    "rdd_nodes = sc.parallelize(nodes)\n",
+    "rdd_edges = sc.parallelize(edges)\n",
+    "rdd_result = single_source_shortest_path(rdd_nodes, rdd_edges)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[(1, 0), (2, 3), (3, 2), (4, 1), (5, 8), (6, 3), (7, inf), (8, inf)]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rdd_init = rdd_updated_cost\n",
+    "\n",
+    "rdd_pass_msg = rdd_edges.join(rdd_init).mapValues(lambda x: (x[0][0], x[0][1] + x[1])).values()\n",
+    "rdd_reduce_msg = rdd_pass_msg.reduceByKey(lambda x, y: min(x, y))\n",
+    "rdd_updated_cost = rdd_init.leftOuterJoin(rdd_reduce_msg).mapValues(lambda x: robust_min(x))\n",
+    "rdd_updated_cost.collect()"
    ]
   }
  ],
