--- a/tarea_2.ipynb
+++ b/tarea_2.ipynb
@@ -28,11 +28,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "23/06/21 22:00:13 WARN Utils: Your hostname, Matiass-MacBook-Air.local resolves to a loopback address: 127.0.0.1; using 192.168.100.162 instead (on interface en0)\n",
-      "23/06/21 22:00:13 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
+      "23/06/23 15:50:35 WARN Utils: Your hostname, Matiass-MacBook-Air.local resolves to a loopback address: 127.0.0.1; using 192.168.100.162 instead (on interface en0)\n",
+      "23/06/23 15:50:35 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
       "Setting default log level to \"WARN\".\n",
       "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
-      "23/06/21 22:00:13 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+      "23/06/23 15:50:36 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
      ]
     }
    ],
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,12 +348,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "initial_node = 1\n",
-    "bc_initial_node = sc.broadcast(initial_node) # Disponibilizar para todos los worker\n",
     "rdd_nodes = sc.parallelize(nodes)\n",
     "rdd_edges = sc.parallelize(edges)"
    ]
@@ -368,16 +366,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
-     ]
-    },
     {
      "data": {
       "text/plain": [
@@ -392,7 +383,7 @@
        " (5, (6, 1))]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -413,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -422,13 +413,17 @@
        "[(1, 0), (2, inf), (3, inf), (4, inf), (5, inf), (6, inf), (7, inf), (8, inf)]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "rdd_init = rdd_nodes.map(lambda x: (x, math.inf) if x != bc_initial_node.value else (x, 0))\n",
+    "def init_rdd(initial_node):\n",
+    "    initial_node = 1\n",
+    "    bc_initial_node = sc.broadcast(initial_node) # Disponibilizar para todos los worker\n",
+    "    return rdd_nodes.map(lambda x: (x, math.inf) if x != bc_initial_node.value else (x, 0))\n",
+    "rdd_init = init_rdd(1)\n",
     "rdd_init.collect()"
    ]
   },
@@ -443,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -467,7 +462,7 @@
        " (7, ((8, 9), inf))]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -478,16 +473,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
-     ]
-    },
     {
      "data": {
       "text/plain": [
@@ -502,13 +490,15 @@
        " (8, inf)]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "rdd_pass_msg = rdd_edges.join(rdd_init).mapValues(lambda x: (x[0][0], x[0][1] + x[1])).values()\n",
+    "def pass_msg(rdd_edges, rdd_prev):\n",
+    "    return rdd_edges.join(rdd_prev).mapValues(lambda x: (x[0][0], x[0][1] + x[1])).values()\n",
+    "rdd_pass_msg = pass_msg(rdd_edges, rdd_init)\n",
     "rdd_pass_msg.collect()"
    ]
   },
@@ -523,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -532,22 +522,22 @@
        "[(2, 4), (3, 2), (4, 1), (5, inf), (6, inf), (8, inf)]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def pass_msg(rdd_pass_msg):\n",
+    "def reduce_msg(rdd_pass_msg):\n",
     "    return rdd_pass_msg.reduceByKey(lambda x, y: min(x, y))\n",
     "    \n",
-    "rdd_reduce_msg = pass_msg(rdd_pass_msg)\n",
+    "rdd_reduce_msg = reduce_msg(rdd_pass_msg)\n",
     "rdd_reduce_msg.collect()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -563,7 +553,7 @@
        "[(1, 0), (2, 4), (3, 2), (4, 1), (5, inf), (6, inf), (7, inf), (8, inf)]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -576,7 +566,10 @@
     "    except:\n",
     "        return a if a != None else b\n",
     "    \n",
-    "rdd_updated_cost = rdd_init.leftOuterJoin(rdd_reduce_msg).mapValues(lambda x: robust_min(x))\n",
+    "def update_cost(rdd_prev, rdd_reduce_msg):\n",
+    "    return rdd_prev.leftOuterJoin(rdd_reduce_msg).mapValues(lambda x: robust_min(x))\n",
+    "\n",
+    "rdd_updated_cost = update_cost(rdd_init, rdd_reduce_msg)\n",
     "rdd_updated_cost.collect()"
    ]
   },
@@ -590,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -604,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -620,7 +613,7 @@
        "False"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -639,10 +632,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
+    "def init_rdd(initial_node):\n",
+    "    initial_node = 1\n",
+    "    bc_initial_node = sc.broadcast(initial_node) # Disponibilizar para todos los worker\n",
+    "    return rdd_nodes.map(lambda x: (x, math.inf) if x != bc_initial_node.value else (x, 0))\n",
+    "\n",
+    "def pass_msg(rdd_edges, rdd_prev):\n",
+    "    return rdd_edges.join(rdd_prev).mapValues(lambda x: (x[0][0], x[0][1] + x[1])).values()\n",
+    "\n",
+    "def reduce_msg(rdd_pass_msg):\n",
+    "    return rdd_pass_msg.reduceByKey(lambda x, y: min(x, y))\n",
+    "\n",
     "def robust_min(x):\n",
     "    a, b = x\n",
     "    try:\n",
@@ -650,25 +654,32 @@
     "    except:\n",
     "        return a if a != None else b\n",
     "    \n",
+    "def update_cost(rdd_prev, rdd_reduce_msg):\n",
+    "    return rdd_prev.leftOuterJoin(rdd_reduce_msg).mapValues(lambda x: robust_min(x))\n",
+    "    \n",
     "def stop_condition(rdd_pre, rdd_post):\n",
     "    # RDD donde las llaves son los nodos y los valores son 0 si no hubo cambio y 1 si lo hubo\n",
     "    rdd_track_changes = rdd_pre.join(rdd_post).mapValues(lambda x: int(x[0] != x[1]))\n",
-    "    print('Track changes:', rdd_track_changes.collect())\n",
+    "    #print('Track changes:', rdd_track_changes.collect())\n",
     "    # Intersección\n",
     "    n_changes = rdd_track_changes.values().reduce(lambda x, y: x + y) \n",
     "    return n_changes == 0\n",
     "\n",
-    "def single_source_shortest_path(rdd_nodes, rdd_edges):\n",
+    "def single_source_shortest_path(rdd_nodes, rdd_edges, initial_node):\n",
     "    rdd_edges = rdd_edges.map(lambda x: (x[0], (x[1], x[2])))\n",
     "\n",
     "    # Nodo inicial en 0, el resto en infinito\n",
-    "    rdd_init = rdd_nodes.map(lambda x: (x, math.inf) if x != bc_initial_node.value else (x, 0))\n",
+    "    rdd_init = init_rdd(initial_node)\n",
     "    rdd_prev_cost = rdd_init\n",
+    "    \n",
     "    stop_counter = 0\n",
     "    for i in range(10):\n",
-    "        rdd_pass_msg = rdd_edges.join(rdd_prev_cost).mapValues(lambda x: (x[0][0], x[0][1] + x[1])).values()\n",
-    "        rdd_reduce_msg = rdd_pass_msg.reduceByKey(lambda x, y: min(x, y))\n",
-    "        rdd_updated_cost = rdd_prev_cost.leftOuterJoin(rdd_reduce_msg).mapValues(lambda x: robust_min(x))\n",
+    "        rdd_pass_msg = pass_msg(rdd_edges, rdd_prev_cost)\n",
+    "        #rdd_pass_msg = rdd_edges.join(rdd_prev_cost).mapValues(lambda x: (x[0][0], x[0][1] + x[1])).values()\n",
+    "        rdd_reduce_msg = reduce_msg(rdd_pass_msg)\n",
+    "        # rdd_reduce_msg = rdd_pass_msg.reduceByKey(lambda x, y: min(x, y))\n",
+    "        rdd_updated_cost = update_cost(rdd_prev_cost, rdd_reduce_msg)\n",
+    "        #rdd_updated_cost = rdd_prev_cost.leftOuterJoin(rdd_reduce_msg).mapValues(lambda x: robust_min(x))\n",
     "        if stop_condition(rdd_prev_cost, rdd_updated_cost):\n",
     "            stop_counter += 1\n",
     "            if stop_counter == 2:\n",
@@ -683,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -697,9 +708,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Track changes: [(1, 0), (2, 1), (3, 1), (4, 1), (5, 0), (6, 0), (7, 0), (8, 0)]\n",
-      "Iteracion: 0\n",
-      "[(1, 0), (2, 4), (3, 2), (4, 1), (5, inf), (6, inf), (7, inf), (8, inf)]\n"
+      "Track changes: [(1, 0), (2, 1), (3, 1), (4, 1), (5, 0), (6, 0), (7, 0), (8, 0)]\n"
      ]
     },
     {
@@ -727,21 +736,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iteracion: 1\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[(1, 0), (2, 3), (3, 2), (4, 1), (5, 8), (6, 3), (7, inf), (8, inf)]\n"
+      "Track changes: [(1, 0), (2, 0), (3, 0), (4, 0), (5, 0), (6, 0), (7, 0), (8, 0)]\n"
      ]
     },
     {
@@ -764,58 +759,6 @@
      "text": [
       "                                                                                \r"
      ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Iteracion: 2\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[(1, 0), (2, 3), (3, 2), (4, 1), (5, 8), (6, 3), (7, inf), (8, inf)]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Track changes: [(1, 0), (2, 0), (3, 0), (4, 0), (5, 0), (6, 0), (7, 0), (8, 0)]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "PythonRDD[225] at RDD at PythonRDD.scala:53"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -823,22 +766,14 @@
     "edges = [(1,2,4), (1,3,2), (1,4,1), (3,2,1), (3,5,6),(4,5,9),(4,6,2),(7,8,9), (5,6,1)]\n",
     "\n",
     "initial_node = 1\n",
-    "bc_initial_node = sc.broadcast(initial_node) # Disponibilizar para todos los worker\n",
     "rdd_nodes = sc.parallelize(nodes)\n",
     "rdd_edges = sc.parallelize(edges)\n",
-    "rdd_result = single_source_shortest_path(rdd_nodes, rdd_edges)"
+    "rdd_result = single_source_shortest_path(rdd_nodes, rdd_edges, initial_node)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -854,18 +789,13 @@
        "[(1, 0), (2, 3), (3, 2), (4, 1), (5, 8), (6, 3), (7, inf), (8, inf)]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "rdd_init = rdd_updated_cost\n",
-    "\n",
-    "rdd_pass_msg = rdd_edges.join(rdd_init).mapValues(lambda x: (x[0][0], x[0][1] + x[1])).values()\n",
-    "rdd_reduce_msg = rdd_pass_msg.reduceByKey(lambda x, y: min(x, y))\n",
-    "rdd_updated_cost = rdd_init.leftOuterJoin(rdd_reduce_msg).mapValues(lambda x: robust_min(x))\n",
-    "rdd_updated_cost.collect()"
+    "rdd_result.collect()"
    ]
   }
  ],
