agregar descarga de datos

--- a/problema1.ipynb
+++ b/problema1.ipynb
@@ -17,6 +17,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "!pip install pyspark"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!wget https://github.com/IIC2440/Syllabus-2023-1/raw/main/Actividades/cora.zip\n",
+    "!unzip /content/cora.zip"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from pyspark.sql import SparkSession\n",
     "import pandas as pd\n",
     "import math\n",
