ajustes de nombres

--- a/problema2.ipynb
+++ b/problema2.ipynb
@@ -13,18 +13,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: pyspark in /Users/matif/.pyenv/versions/3.10.0/envs/tareas_proce/lib/python3.10/site-packages (3.4.0)\n",
+      "Requirement already satisfied: py4j==0.10.9.7 in /Users/matif/.pyenv/versions/3.10.0/envs/tareas_proce/lib/python3.10/site-packages (from pyspark) (0.10.9.7)\n"
+     ]
+    }
+   ],
    "source": [
     "!pip install pyspark"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--2023-06-27 18:22:14--  https://github.com/IIC2440/Syllabus-2023-1/raw/main/Actividades/cora.zip\n",
+      "Resolving github.com (github.com)... 20.201.28.151\n",
+      "Connecting to github.com (github.com)|20.201.28.151|:443... connected.\n",
+      "HTTP request sent, awaiting response... 302 Found\n",
+      "Location: https://raw.githubusercontent.com/IIC2440/Syllabus-2023-1/main/Actividades/cora.zip [following]\n",
+      "--2023-06-27 18:22:14--  https://raw.githubusercontent.com/IIC2440/Syllabus-2023-1/main/Actividades/cora.zip\n",
+      "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 2606:50c0:8000::154, 2606:50c0:8001::154, 2606:50c0:8003::154, ...\n",
+      "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|2606:50c0:8000::154|:443... connected.\n",
+      "HTTP request sent, awaiting response... 200 OK\n",
+      "Length: 165770 (162K) [application/zip]\n",
+      "Saving to: ‘cora.zip’\n",
+      "\n",
+      "cora.zip            100%[===================>] 161.88K  --.-KB/s    in 0.01s   \n",
+      "\n",
+      "2023-06-27 18:22:15 (14.2 MB/s) - ‘cora.zip’ saved [165770/165770]\n",
+      "\n",
+      "unzip:  cannot find or open /content/cora.zip, /content/cora.zip.zip or /content/cora.zip.ZIP.\n"
+     ]
+    }
+   ],
    "source": [
     "!wget https://github.com/IIC2440/Syllabus-2023-1/raw/main/Actividades/cora.zip\n",
     "!unzip /content/cora.zip"
@@ -32,9 +65,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Setting default log level to \"WARN\".\n",
+      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
+      "23/06/27 18:22:18 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+     ]
+    }
+   ],
    "source": [
     "from pyspark.sql import SparkSession\n",
     "import pandas as pd\n",
@@ -54,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,9 +133,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[(1, (2, 4)),\n",
+       " (1, (3, 2)),\n",
+       " (1, (4, 1)),\n",
+       " (3, (2, 1)),\n",
+       " (3, (5, 6)),\n",
+       " (4, (5, 9)),\n",
+       " (4, (6, 2)),\n",
+       " (7, (8, 9)),\n",
+       " (5, (6, 1))]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "rdd_edges = rdd_edges.map(lambda x: (x[0], (x[1], x[2])))\n",
     "rdd_edges.collect()"
@@ -109,9 +178,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(1, 0), (2, inf), (3, inf), (4, inf), (5, inf), (6, inf), (7, inf), (8, inf)]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def init_rdd(rdd_nodes, initial_node):\n",
     "    bc_initial_node = sc.broadcast(initial_node) # Disponibilizar para todos los worker\n",
@@ -131,18 +211,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[(1, ((2, 4), 0)),\n",
+       " (1, ((3, 2), 0)),\n",
+       " (1, ((4, 1), 0)),\n",
+       " (3, ((2, 1), inf)),\n",
+       " (3, ((5, 6), inf)),\n",
+       " (4, ((5, 9), inf)),\n",
+       " (4, ((6, 2), inf)),\n",
+       " (5, ((6, 1), inf)),\n",
+       " (7, ((8, 9), inf))]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "rdd_edges.join(rdd_init).collect()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[(2, 4),\n",
+       " (3, 2),\n",
+       " (4, 1),\n",
+       " (2, inf),\n",
+       " (5, inf),\n",
+       " (5, inf),\n",
+       " (6, inf),\n",
+       " (6, inf),\n",
+       " (8, inf)]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def pass_msg(rdd_edges, rdd_prev):\n",
     "    return rdd_edges.join(rdd_prev).mapValues(lambda x: (x[0][0], x[0][1] + x[1])).values()\n",
@@ -161,9 +293,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(2, 4), (3, 2), (4, 1), (5, inf), (6, inf), (8, inf)]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def reduce_msg(rdd_pass_msg):\n",
     "    return rdd_pass_msg.reduceByKey(lambda x, y: min(x, y))\n",
@@ -174,9 +317,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[(1, 0), (2, 4), (3, 2), (4, 1), (5, inf), (6, inf), (7, inf), (8, inf)]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def robust_min(x):\n",
     "    a, b = x\n",
@@ -202,9 +363,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def stop_condition(rdd_pre, rdd_post):\n",
     "    # RDD donde las llaves son los nodos y los valores son 1 si no hubo cambio y 0 si lo hubo\n",
@@ -225,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -304,6 +483,30 @@
      "text": [
       "                                                                                \r"
      ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total iterations: 4\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[(1, 0), (2, 3), (3, 2), (4, 1), (5, 8), (6, 3), (7, inf), (8, inf)]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -322,7 +525,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Pruebas con Cora"
+    "### Pruebas con Cora\n",
+    "Se deja el código dispuesto para hacer pruebas con este grafo, pero es muy grande y la verdad es que no llega a converger en un tiempo razonable coriéndolo con 1 máquina."
    ]
   },
   {
@@ -339,13 +543,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "citas = pd.read_csv('cora/cora.cites',sep=\"\\t\",\n",
-    "                    header=None,\n",
-    "                    names=[\"target\", \"source\"])\n",
-    "nodes = list(set(list(citas.target.values) + list(citas.source.values)))\n",
-    "edges = []\n",
-    "for target, source in citas.values:\n",
-    "    edges.append((source, target, 1))"
+    "# citas = pd.read_csv('cora/cora.cites',sep=\"\\t\",\n",
+    "#                     header=None,\n",
+    "#                     names=[\"target\", \"source\"])\n",
+    "# nodes = list(set(list(citas.target.values) + list(citas.source.values)))\n",
+    "# edges = []\n",
+    "# for target, source in citas.values:\n",
+    "#     edges.append((source, target, 1))"
    ]
   },
   {
@@ -370,10 +574,10 @@
     }
    ],
    "source": [
-    "rdd_nodes = sc.parallelize(nodes)\n",
-    "rdd_edges = sc.parallelize(edges)\n",
-    "initial_node = 1105932\n",
-    "rdd_result = single_source_shortest_path(rdd_nodes, rdd_edges, initial_node)"
+    "# rdd_nodes = sc.parallelize(nodes)\n",
+    "# rdd_edges = sc.parallelize(edges)\n",
+    "# initial_node = 1105932\n",
+    "# rdd_result = single_source_shortest_path(rdd_nodes, rdd_edges, initial_node)"
    ]
   }
  ],
