--- a/problema1.ipynb
+++ b/problema1.ipynb
@@ -13,18 +13,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: pyspark in /Users/matif/.pyenv/versions/3.10.0/envs/tareas_proce/lib/python3.10/site-packages (3.4.0)\n",
+      "Requirement already satisfied: py4j==0.10.9.7 in /Users/matif/.pyenv/versions/3.10.0/envs/tareas_proce/lib/python3.10/site-packages (from pyspark) (0.10.9.7)\n"
+     ]
+    }
+   ],
    "source": [
     "!pip install pyspark"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--2023-06-27 18:57:21--  https://github.com/IIC2440/Syllabus-2023-1/raw/main/Actividades/cora.zip\n",
+      "Resolving github.com (github.com)... 20.201.28.151\n",
+      "Connecting to github.com (github.com)|20.201.28.151|:443... connected.\n",
+      "HTTP request sent, awaiting response... 302 Found\n",
+      "Location: https://raw.githubusercontent.com/IIC2440/Syllabus-2023-1/main/Actividades/cora.zip [following]\n",
+      "--2023-06-27 18:57:22--  https://raw.githubusercontent.com/IIC2440/Syllabus-2023-1/main/Actividades/cora.zip\n",
+      "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 2606:50c0:8000::154, 2606:50c0:8001::154, 2606:50c0:8003::154, ...\n",
+      "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|2606:50c0:8000::154|:443... connected.\n",
+      "HTTP request sent, awaiting response... 200 OK\n",
+      "Length: 165770 (162K) [application/zip]\n",
+      "Saving to: ‘cora.zip.2’\n",
+      "\n",
+      "cora.zip.2          100%[===================>] 161.88K  --.-KB/s    in 0.01s   \n",
+      "\n",
+      "2023-06-27 18:57:22 (12.3 MB/s) - ‘cora.zip.2’ saved [165770/165770]\n",
+      "\n",
+      "unzip:  cannot find or open /content/cora.zip, /content/cora.zip.zip or /content/cora.zip.ZIP.\n"
+     ]
+    }
+   ],
    "source": [
     "!wget https://github.com/IIC2440/Syllabus-2023-1/raw/main/Actividades/cora.zip\n",
     "!unzip /content/cora.zip"
@@ -32,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,9 +116,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(1, 0.25), (2, 0.25), (3, 0.25), (4, 0.25)]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "n_nodes = rdd_nodes.count()\n",
     "# Disponibilizamos la cantidad de nodos para todos los workers\n",
@@ -105,9 +149,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "defaultdict(int, {1: 1, 2: 2, 3: 1})"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "neigh_counts = rdd_edges.countByKey()\n",
     "# Disponibilizamos la cantidad de mensajes enviados por nodo para todos los workers\n",
@@ -125,9 +180,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(1, 0.25), (2, 0.125), (3, 0.25), (4, 0.25)]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def prepare_node_msg(node, init_msg):\n",
     "    if neigh_counts[node] != 0:\n",
@@ -163,16 +229,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(2, 0.5), (3, 0.125), (4, 0.125)]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def send_msg(rdd_edges, rdd_prep_msg):\n",
-    "    rdd_msg_sent = rdd_edges.join(rdd_prep_msg)\n",
-    "    rdd_received_msg = rdd_msg_sent.values().reduceByKey(lambda x, y: x + y)\n",
-    "    return rdd_received_msg\n",
-    "rdd_received_msg = send_msg(rdd_edges, rdd_prep_msg)\n",
-    "rdd_received_msg.collect()"
+    "    rdd_received_msg = rdd_edges.join(rdd_prep_msg)\n",
+    "    rdd_reduced_msg = rdd_received_msg.values().reduceByKey(lambda x, y: x + y)\n",
+    "    return rdd_reduced_msg\n",
+    "rdd_reduced_msg = send_msg(rdd_edges, rdd_prep_msg)\n",
+    "rdd_reduced_msg.collect()"
    ]
   },
   {
@@ -186,17 +263,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(2, 0.4625), (3, 0.14375), (4, 0.14375)]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Disponibilizamos el damping factor para todos los workers\n",
     "damping = 0.85\n",
     "bc_damping = sc.broadcast(damping)\n",
-    "def update_pr(rdd_received_msg):\n",
-    "    rdd_updated_pr = rdd_received_msg.mapValues(lambda x: x * bc_damping.value + (1-bc_damping.value)/bc_n_nodes.value)\n",
+    "def update_pr(rdd_reduced_msg):\n",
+    "    rdd_updated_pr = rdd_reduced_msg.mapValues(lambda x: x * bc_damping.value + (1-bc_damping.value)/bc_n_nodes.value)\n",
     "    return rdd_updated_pr\n",
-    "rdd_updated_pr = update_pr(rdd_received_msg)\n",
+    "rdd_updated_pr = update_pr(rdd_reduced_msg)\n",
     "rdd_updated_pr.collect()"
    ]
   },
@@ -218,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,9 +333,9 @@
     "    \n",
     "    for i in range(max_iterations):\n",
     "        # Enviar mensaje y gestionar merge al recibir\n",
-    "        rdd_received_msg = send_msg(rdd_edges, rdd_prep_msg)\n",
+    "        rdd_reduced_msg = send_msg(rdd_edges, rdd_prep_msg)\n",
     "        # Actualizar PageRank\n",
-    "        rdd_updated_pr = update_pr(rdd_received_msg)\n",
+    "        rdd_updated_pr = update_pr(rdd_reduced_msg)\n",
     "        # Calcular distancia entre el PageRank recién obtenido y el de la iter previa\n",
     "        mean_distance = mean_absolute_error(prev_pr, rdd_updated_pr)\n",
     "        # Condición de parada\n",
@@ -264,9 +352,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total iterations: 6\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[(2, 0.11527618701171877), (3, 0.10328731884765627), (4, 0.10328731884765627)]"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "final_pr = page_rank(rdd_nodes, rdd_edges)\n",
     "final_pr.collect()"
@@ -277,7 +397,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Prueba con grafo Cora"
+    "Sólo se devuelven los nodos con un PageRank distinto de cero."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Prueba con grafo Cora\n",
+    "\n",
+    "Se deja el código dispuesto para hacer pruebas con este grafo, pero es muy grande y la verdad es que no llega a converger en un tiempo razonable coriéndolo con 1 máquina."
    ]
   },
   {
@@ -294,9 +424,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "citas = pd.read_csv('cora/cora.cites',sep=\"\\t\",\n",
-    "                    header=None,\n",
-    "                    names=[\"target\", \"source\"])"
+    "# citas = pd.read_csv('cora/cora.cites',sep=\"\\t\",\n",
+    "#                     header=None,\n",
+    "#                     names=[\"target\", \"source\"])"
    ]
   },
   {
@@ -313,12 +443,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nodes = list(set(list(citas.target.values) + list(citas.source.values)))\n",
-    "edges = []\n",
-    "for source, target in citas.values:\n",
-    "    edges.append((source, target))\n",
-    "rdd_nodes = sc.parallelize(nodes)\n",
-    "rdd_edges = sc.parallelize(edges)"
+    "# nodes = list(set(list(citas.target.values) + list(citas.source.values)))\n",
+    "# edges = []\n",
+    "# for source, target in citas.values:\n",
+    "#     edges.append((source, target))\n",
+    "# rdd_nodes = sc.parallelize(nodes)\n",
+    "# rdd_edges = sc.parallelize(edges)"
    ]
   },
   {
@@ -335,7 +465,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rdd_result = page_rank(rdd_nodes, rdd_edges)"
+    "# rdd_result = page_rank(rdd_nodes, rdd_edges)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Sólo se devuelven los nodos con un PageRank distinto de cero."
    ]
   }
  ],
