--- a/problema2.ipynb
+++ b/problema2.ipynb
@@ -38,21 +38,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--2023-06-27 18:22:14--  https://github.com/IIC2440/Syllabus-2023-1/raw/main/Actividades/cora.zip\n",
+      "--2023-06-28 20:31:30--  https://github.com/IIC2440/Syllabus-2023-1/raw/main/Actividades/cora.zip\n",
       "Resolving github.com (github.com)... 20.201.28.151\n",
       "Connecting to github.com (github.com)|20.201.28.151|:443... connected.\n",
       "HTTP request sent, awaiting response... 302 Found\n",
       "Location: https://raw.githubusercontent.com/IIC2440/Syllabus-2023-1/main/Actividades/cora.zip [following]\n",
-      "--2023-06-27 18:22:14--  https://raw.githubusercontent.com/IIC2440/Syllabus-2023-1/main/Actividades/cora.zip\n",
-      "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 2606:50c0:8000::154, 2606:50c0:8001::154, 2606:50c0:8003::154, ...\n",
-      "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|2606:50c0:8000::154|:443... connected.\n",
+      "--2023-06-28 20:31:30--  https://raw.githubusercontent.com/IIC2440/Syllabus-2023-1/main/Actividades/cora.zip\n",
+      "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 2606:50c0:8001::154, 2606:50c0:8003::154, 2606:50c0:8002::154, ...\n",
+      "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|2606:50c0:8001::154|:443... connected.\n",
       "HTTP request sent, awaiting response... 200 OK\n",
       "Length: 165770 (162K) [application/zip]\n",
-      "Saving to: ‘cora.zip’\n",
+      "Saving to: ‘cora.zip.1’\n",
       "\n",
-      "cora.zip            100%[===================>] 161.88K  --.-KB/s    in 0.01s   \n",
+      "cora.zip.1          100%[===================>] 161.88K  --.-KB/s    in 0.01s   \n",
       "\n",
-      "2023-06-27 18:22:15 (14.2 MB/s) - ‘cora.zip’ saved [165770/165770]\n",
+      "2023-06-28 20:31:30 (11.5 MB/s) - ‘cora.zip.1’ saved [165770/165770]\n",
       "\n",
       "unzip:  cannot find or open /content/cora.zip, /content/cora.zip.zip or /content/cora.zip.ZIP.\n"
      ]
@@ -72,9 +72,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "23/06/28 20:31:33 WARN Utils: Your hostname, Matiass-MacBook-Air.local resolves to a loopback address: 127.0.0.1; using 192.168.100.162 instead (on interface en0)\n",
+      "23/06/28 20:31:33 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
       "Setting default log level to \"WARN\".\n",
       "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
-      "23/06/27 18:22:18 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+      "23/06/28 20:31:34 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
      ]
     }
    ],
@@ -539,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -562,17 +564,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# rdd_nodes = sc.parallelize(nodes)\n",
     "# rdd_edges = sc.parallelize(edges)\n",
